--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -79,7 +79,7 @@
         <div class="player-quick-look__kd__nr">
           <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue || 'N/A'"></span>
         </div>
-        <label class="data-label">K/D</label>
+        <label class="data-label text-right">K/D</label>
       </div>
     </div>
   </div>
