fix spacing on buttons, add analytics, reorder buttons, cleanup html

--- a/app/assets/css/parts/_controls.scss
+++ b/app/assets/css/parts/_controls.scss
@@ -19,7 +19,8 @@ header {
 
   .btn.btn.btn {
     color: $controls-btn-color;
-    padding: 8px 15px;
+    //padding: 8px 15px;
+    padding: 0.5em 0px;
   }
 }
 
