--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -33,7 +33,7 @@
 
 <div class="block__footer-dark block__footer--ad-dark">
   <div class="ad">
-    <div adsense></div>
+    <adsense ad-client="ca-pub-7408805581120581" ad-slot="1127916954" inline-style="display:block" format-auto="true"></adsense>
   </div>
 </div>
 
