--- a/app/assets/css/elements/_stats.scss
+++ b/app/assets/css/elements/_stats.scss
@@ -24,6 +24,13 @@
   }
 }
 
+.stat-header {
+  @extend .data-label;
+  color: #333;
+  font-weight: 400;
+  white-space: normal;
+}
+
 .stat-row:not(:first-child) {
   margin-top: .82em;
 }
