--- a/app/assets/css/inc/_colors.scss
+++ b/app/assets/css/inc/_colors.scss
@@ -8,6 +8,7 @@ $info: #03A9F4;
 
 $text-on-dark: #999;
 $controls-btn-color: darken(white, 30%);
+$home-aside-color: #777;
 
 $equipped-background: #ECEFF1;
 $last-matches-background: #E8F5E9;
