--- a/app/assets/css/main/_layout.scss
+++ b/app/assets/css/main/_layout.scss
@@ -131,6 +131,16 @@
   margin: .25em 0;
 }
 
+hr {
+  height: 1px;
+  border: 0;
+  background: linear-gradient(to right, rgba(150,150,150,0.1) 0%,rgba(150,150,150,.3) 50%,rgba(150,150,150,0.1) 100%);
+}
+
+.info {
+  color: $info;
+}
+
 .star {
   color: $info;
 }
