--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -18,6 +18,11 @@
   box-shadow: inset 0 -175px 70px -100px rgba(0, 0, 0, .75);
 }
 
+.modal-hero__header {
+  flex-grow: 1;
+  width: 100%;
+}
+
 .modal-close {
   position: absolute;
   right: 2em;
@@ -39,19 +44,16 @@
   font-size: 2em;
   color: white;
   line-height: 1;
+  margin: 0;
 }
 
-.modal-hero__stats {
-  font-size: 1.2em;
-  color: white;
-  line-height: 1;
-  //float: right;
+.modal-hero__switch {
+
 }
 
 .modal-hero__description {
   @extend .data-label;
-  font-size: .8em;
-  //float: right;
+  font-size: .9em;
 }
 
 .modal-hero__label {
@@ -123,6 +125,28 @@
   font-size: 2em;
   color: white;
   text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
+}
+
+.modal-hero__switch {
+  a {
+    color: white;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+    width: 50%;
+  }
+
+  label {
+    @extend .data-label;
+  }
+}
+
+.modal-hero__switch__btns {
+  display: flex;
+
+  > a {
+    display: block;
+    flex-grow: 1;
+    text-align: center;
+  }
 }
 
 .close {
