--- a/app/assets/css/parts/_home.scss
+++ b/app/assets/css/parts/_home.scss
@@ -13,22 +13,21 @@
 }
 
 .home__main {
-  width: 60%;
-  flex-grow: 2;
+  width: 70%;
+  flex-grow: 3;
 }
 
 .home__aside {
-  width: 40%;
+  width: 30%;
   flex-grow: 1;
+  align-items: center;
+  order: -1;
 }
 
 .home__main,
 .home__aside {
   padding: 0 1em;
   display: flex;
-  display: -webkit-box;
-  flex-direction: column;
-  -webkit-box-orient: vertical;
 
   > .block {
     flex-grow: 1;
