--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -1,37 +1,4 @@
-<div class="domain-switch">
-  <div class="btn-group-justified">
-    <a type="button" class="btn btn-default" ng-click="toggleStats()"
-       analytics-on analytics-event="Toggle Stats" analytics-category="Toggle Stats">
-      <span class="highlight" ng-bind="hideStats ? 'Show' : 'Hide'"></span>Stats
-    </a>
-    <!--<a type="button" class="btn btn-default" href="https://guardian.gg" target="_blank"-->
-       <!--analytics-on analytics-event="Click" analytics-category="GGG Controls">-->
-      <!--Guardian<span class="highlight">.gg</span>-->
-    <!--</a>-->
-    <a type="button" class="btn btn-default" ng-if="!sdOpponents" href="https://opponents.destinytrialsreport.com" target="_self"
-       analytics-on analytics-event="Click" analytics-category="myOpponents">
-      <span class="highlight hide-on-sm">my</span>Opponents
-    </a>
-    <a type="button" class="btn btn-default" ng-if="!subdomain" href="https://my.destinytrialsreport.com" target="_self"
-       analytics-on analytics-event="Click" analytics-category="myReport">
-      <span class="highlight">my</span>Report
-    </a>
-    <a type="button" class="btn btn-default" ng-if="subdomain || sdOpponents" href="https://destinytrialsreport.com" target="_self"
-       analytics-on analytics-event="Click" analytics-category="trialsReport">
-      <span class="highlight">trials</span>Report
-    </a>
-    <!--<a type="button" class="btn btn-default" title="FAQ" data-content-template="shared/modals/faq.modal.html" bs-modal-->
-       <!--analytics-on analytics-event="Click" analytics-category="FAQ">-->
-      <!--<span class="highlight">FAQ</span>-->
-    <!--</a>-->
-    <!--<a type="button" class="btn btn-default" href="https://doubles.destinytrialsreport.com" target="_self"-->
-       <!--analytics-on analytics-event="Click" analytics-category="Doubles">-->
-      <!--<span class="highlight">C</span>Doubles-->
-    <!--</a>-->
-  </div>
-</div>
-
-<div class="block__footer-dark block__footer--ad-dark" style="min-height: 22em;">
+<div class="block__footer-dark block__footer--ad-dark" style="height: 22em;">
   <div class="ad">
     <adsense ad-client="ca-pub-7408805581120581" ad-slot="1127916954" inline-style="display:block" format-auto="true"></adsense>
   </div>
