--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="block__footer-dark block__footer--ad-dark" style="min-height: 22em;">
-  <div class="ad">
+  <div class="ad" style="min-height: 22em;">
     <adsense ad-client="ca-pub-7408805581120581" ad-slot="1127916954" inline-style="display:block" format-auto="true"></adsense>
   </div>
 </div>
