--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -14,6 +14,13 @@
                ng-class="{'player-hazard--developer': hazard === 'Developer' || hazard === 'Guardian.gg', 'player-hazard--donator': hazard === 'Donator'}"
                data-placement="bottom" data-content="{{DestinyHazardDefinition[hazard]}}" bs-popover>
           </div>
+          <div class="player-hazard player-hazard--charity1"
+               data-auto-close="1"
+               data-placement="bottom"
+               data-template-url="shared/popovers/charity1.popover.html"
+               bs-popover>
+            Awesome
+          </div>
         </div>
         <div class="player-level">
           <div class="player-level__light highlight" ng-show="player.characterInfo.stats.STAT_LIGHT.value">
