GDSF popover styling, tried accessible popover

--- a/app/assets/css/elements/_popover.scss
+++ b/app/assets/css/elements/_popover.scss
@@ -60,10 +60,15 @@
   font-weight: 300;
   padding: .5em .8em;
 
-  > img {
+  img {
     max-width: 100%;
     display: block;
     margin: .5rem auto;
+  }
+
+  a {
+    color: lighten(#333, 30%);
+    text-decoration: underline;
   }
 }
 
