--- a/app/assets/css/parts/_player-hazards.scss
+++ b/app/assets/css/parts/_player-hazards.scss
@@ -45,7 +45,7 @@
 .player-hazard--charity1 {
   background: white;
   text-shadow: none;
-  color: #003B7F;
+  color: #651FFF;
 }
 
 .player-hazard--none {
