--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -15,10 +15,9 @@
                data-placement="bottom" data-content="{{DestinyHazardDefinition[hazard]}}" bs-popover>
           </div>
           <div class="player-hazard player-hazard--charity1"
-               data-auto-close="1"
-               data-placement="bottom"
                data-template-url="shared/popovers/charity1.popover.html"
-               bs-popover>
+               data-placement="bottom"
+               accessible-contents-popover>
             Awesome
           </div>
         </div>
