--- a/app/components/home/opponents.partial.html
+++ b/app/components/home/opponents.partial.html
@@ -46,7 +46,10 @@
       </div>
     </article>
   </div>
-  <article class="home__main" style="min-height: 51em;">
+  <div class="home__aside" ng-if="!opponents">
+    <div ng-include="'components/home/aside.partial.html'"></div>
+  </div>
+  <article class="home__main">
     <div class="block blog-post shadow-z-1" ng-if="!matchResults">
       <div class="blog-post__img blog-image" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}" style="flex-grow: 1;"></div>
       <div class="blog-post__content">
