--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -131,7 +131,7 @@
           </div>
           <div class="col-xs-3 stat first-in-lighthouse__players">
             <span ng-repeat="player in lighthouseLeaderboard[0].players track by $index">
-              <a ng-href="https://my.destinytrialsreport.com/{{$parent.lighthouseLeaderboard[0].platform === 1 ? 'xbox' : 'ps'}}/{{player}}" ng-bind="player" target="_blank"></a>
+              <a ng-href="https://my.trials.report/{{$parent.lighthouseLeaderboard[0].platform === 1 ? 'xbox' : 'ps'}}/{{player}}" ng-bind="player" target="_blank"></a>
             </span>
             <label>Player<span ng-if="lighthouseLeaderboard[0].players.length > 1">s</span></label>
           </div>
