Revert "Replaced links and references to the homepage with the cooler version"
This reverts commit 1ea3602d5ba274538f166d087a1aaa8d7668c342.

--- a/app/components/home/aside.partial.html
+++ b/app/components/home/aside.partial.html
@@ -17,7 +17,7 @@
 	<hr>
 	<section class="more__section" ng-if="!subdomain">
 		<a
-			href="https://my.trials.report"
+			href="https://my.destinytrialsreport.com"
 			target="_self"
 			 analytics-on analytics-event="Click"
 			 analytics-category="myReport">
@@ -28,9 +28,9 @@
 		</a>
 	</section>
 	<hr>
-	<section class="more__section" ng-if="!sdOpponents" href="https://opponents.trials.report">
+	<section class="more__section" ng-if="!sdOpponents" href="https://opponents.destinytrialsreport.com">
 		<a
-			href="https://opponents.trials.report"
+			href="https://opponents.destinytrialsreport.com"
 			target="_self"
 			analytics-on analytics-event="Click"
 			analytics-category="myOpponents">
@@ -43,7 +43,7 @@
 	<hr>
 	<section class="more__section" ng-if="subdomain || sdOpponents">
 		<a
-			href="https://trials.report"
+			href="https://destinytrialsreport.com"
 			target="_self"
 			analytics-on analytics-event="Click"
 			analytics-category="trialsReport">
