--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -14,11 +14,11 @@
                ng-class="{'player-hazard--developer': hazard === 'Developer' || hazard === 'Guardian.gg', 'player-hazard--donator': hazard === 'Donator'}"
                data-placement="bottom" data-content="{{DestinyHazardDefinition[hazard]}}" bs-popover>
           </div>
-          <div class="player-hazard player-hazard--charity1"
+          <div class="player-hazard player-hazard--charity1" ng-repeat="hazard in player.nonHazardCharity track by $index"
                data-template-url="shared/popovers/charity1.popover.html"
                data-placement="bottom"
+               ng-bind="hazard.status"
                accessible-contents-popover>
-            Awesome
           </div>
         </div>
         <div class="player-level">
