New home layout made responsive + made the text effect not fuck up on unsupported browsers

--- a/app/assets/css/elements/_stats.scss
+++ b/app/assets/css/elements/_stats.scss
@@ -56,6 +56,14 @@
   color: #333;
 }
 
+@media all and (max-width: 767px) {
+  .stat-header {
+    margin-bottom: 1em;
+    display: inline-block;
+    font-size: .9em;
+  }
+}
+
 .stat__label--heave {
   color: #666;
 }
