--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -1,3 +1,8 @@
+<a type="button" class="btn btn-default" ng-click="toggleStats()"
+   analytics-on analytics-event="Toggle Stats" analytics-category="Toggle Stats" style="padding: .5em 1em;">
+  <span class="highlight" ng-bind="hideStats ? 'Show' : 'Hide'"></span><span style="color: white;">Stats</span>
+</a>
+
 <div class="block__footer-dark block__footer--ad-dark" style="height: 22em;">
   <div class="ad">
     <adsense ad-client="ca-pub-7408805581120581" ad-slot="1127916954" inline-style="display:block" format-auto="true"></adsense>
