--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -33,14 +33,14 @@
             <label>Total kills</label>
           </div>
         </div>
-        <hr>
+        <hr ng-if="currentMapInfo.heatmapImage || currentMapInfo.mapImage">
         <div class="row" ng-if="currentMapInfo.heatmapImage || currentMapInfo.mapImage">
-          <div class="col-xs-2">
+          <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               Info
             </h3>
           </div>
-          <div class="col-xs-10">
+          <div class="col-xs-12 col-sm-10">
             <button type="button" class="btn btn-inline btn-raised btn-sm" ng-if="currentMapInfo.heatmapImage"
                     data-template-url="shared/modals/heatmap.modal.html" bs-modal>
               Heatmap
@@ -53,7 +53,7 @@
         </div>
         <hr>
         <div class="row" ng-if="currentMapInfo">
-          <div class="col-xs-2">
+          <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               Weapon usage on this map
             </h3>
@@ -91,13 +91,13 @@
                   <span ng-bind="weapon.diffPercentage | number:2"></span>%
                 </div>
               </div>
-              <hr class="visible-xs" ng-if="$index === 0">
+              <hr class="hr--minor visible-xs" ng-if="$index === 0">
             </div>
           </div>
         </div>
         <hr>
         <div class="row">
-          <div class="col-xs-2">
+          <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               Top weapons <span ng-bind="currentMapInfo.weekText"></span>
             </h3>
@@ -119,27 +119,27 @@
                 <span ng-bind="weapon.kills | number:2"></span>%
               </div>
             </div>
-            <hr class="visible-xs" ng-if="$index === 0">
+            <hr class="hr--minor visible-xs" ng-if="$index === 0">
           </div>
         </div>
         <hr>
         <div class="row" ng-init="entry = lighthouseLeaderboard[0]">
-          <div class="col-xs-2">
+          <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
               First players to reach the lighthouse
             </h3>
           </div>
-          <div class="col-xs-3 stat first-in-lighthouse__players">
+          <div class="col-xs-5 col-sm-3 stat first-in-lighthouse__players">
             <span ng-repeat="player in lighthouseLeaderboard[0].players track by $index">
               <a ng-href="https://my.trials.report/{{$parent.lighthouseLeaderboard[0].platform === 1 ? 'xbox' : 'ps'}}/{{player}}" ng-bind="player" target="_blank"></a>
             </span>
             <label>Player<span ng-if="lighthouseLeaderboard[0].players.length > 1">s</span></label>
           </div>
-          <div class="col-xs-3 stat first-in-lighthouse__time">
+          <div class="col-xs-4 col-sm-3 stat first-in-lighthouse__time">
             <span ng-bind="lighthouseLeaderboard[0].time"></span>
             <label>Time needed</label>
           </div>
-          <div class="col-xs-3 first-in-lighthouse__stats">
+          <div class="col-xs-2 col-sm-3 first-in-lighthouse__stats">
             <div class="stat">
               <span ng-if="lighthouseLeaderboard[0].platform === 1">
                 <img src="assets/img/xbox.svg" alt="Xbox">
