Mostly reversed 562f146, I forgive you

--- a/app/assets/css/parts/_player.scss
+++ b/app/assets/css/parts/_player.scss
@@ -2,6 +2,8 @@
   overflow: hidden;
   margin: auto;
   min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .players {
@@ -155,8 +157,7 @@
 }
 
 .player__content {
-  //padding: $player-content-padding;
-  padding: .6em 1em .6em 1em;
+  padding: $player-content-padding;
 }
 
 .player__links {
