--- a/app/components/inventory/inventory.partial.html
+++ b/app/components/inventory/inventory.partial.html
@@ -1,11 +1,13 @@
 <div class="player-tab--equipped">
-
-  <div class="player-tab__section" style="padding-bottom: .4em;padding-top: .4em;">
+  
+  <div class="player-tab__section">
     <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]" top-weapons="player.topWeapons" hide-stats="hideStats"></div>
   </div>
-  <div class="player-tab__section" style="padding-bottom: .4em;padding-top: .4em;">
+
+  <div class="player-tab__section">
     <div armor-nodes="player.inventory.armor.equipped" has-exotic="player.inventory.armor.equipped.definition.tierType === 6"></div>
   </div>
+
   <div build-stats="[player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"></div>
   <div build-stats="[player.characterInfo.stats.STAT_ARMOR, player.characterInfo.stats.STAT_RECOVERY, player.characterInfo.stats.STAT_AGILITY]"></div>
 
@@ -16,24 +18,6 @@
         <img class="player-perk__icon img-responsive" ng-src="{{subclassNode.icon}}" alt="{{subclassNode.name}}">
         <span class="player-perk__title" ng-bind="subclassNode.name"></span>
       </div>
-    </div>
-  </div>
-
-  <div class="block__footer block__footer--ad" style="padding: .7em .7em .3em .7em;margin-left: 0;margin-right: 0;margin-top: 0;">
-    <div class="ad" style="width: 320px;">
-      <a href="{{player.playerAd.url}}" ng-if="player.playerAd && player.playerAd.url" target="_blank"
-         style="display:inline-block;width:320px;height:50px;margin-bottom: 5px;">
-        <img  ng-src="{{player.playerAd.image_url}}">
-      </a>
-      <!--<a href="" ng-if="player.playerAd && !player.playerAd.url" target="_blank"-->
-         <!--title="Advertise your streams for $1" data-content-template="shared/modals/adspace.modal.html"-->
-         <!--style="display:inline-block;width:320px;height:50px;margin-bottom: 5px;" bs-modal>-->
-        <!--<img  ng-src="{{player.playerAd.image_url}}">-->
-      <!--</a>-->
-      <adsense ad-client="ca-pub-7408805581120581" ad-slot="{{adsenseSlots[$index]}}"
-               inline-style="display:inline-block;width:320px;height:50px;"
-               ng-if="!player.playerAd">
-      </adsense>
     </div>
   </div>
 </div>
