Fixed empty popover when player hasn't been flawless

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -110,11 +110,14 @@
         </span>
         <label>Elo Rating</label>
       </div>
-      <div class="col-xs-3 stat" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="top-right" bs-popover>
-        <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse.grimoire !== true">
+      <div class="col-xs-3 stat" ng-if="player.lighthouse.grimoire !== true">
+        <span class="player-main-stats__lighthouse fail">
           <i class="material-icons">&#xE14C;</i>
         </span>
-        <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse.grimoire === true">
+        <label>Flawless</label>
+      </div>
+      <div class="col-xs-3 stat" ng-if="player.lighthouse.grimoire === true" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="top-right" bs-popover>
+        <span class="player-main-stats__lighthouse success">
           <!--<i class="material-icons" ng-if="player.lighthouse.accountCount">&#xE876;</i>-->
           <span ng-bind="player.lighthouse.years ? getLighthouseCount(player, subdomain) + 'x' : 'Year 1'"></span>
         </span>
