--- a/app/assets/css/parts/_home.scss
+++ b/app/assets/css/parts/_home.scss
@@ -15,6 +15,8 @@
 .home__main {
   width: 70%;
   flex-grow: 3;
+  background: url('/assets/img/loading.svg') center center no-repeat;
+  background-size: 3em 3em;
 }
 
 .home__aside {
