--- a/app/assets/css/parts/_maps.scss
+++ b/app/assets/css/parts/_maps.scss
@@ -1,9 +1,16 @@
 .maps {
   position: relative;
   z-index: 1;
-  transition: transform ease-in-out .3s;
+  transition: transform ease-in-out .3s, opacity linear .3s;
 
   &.is-switching {
-    transform: translate3d(120vw, 0, 0);
+    transform: translate3d(5em, 0, 0);
+    opacity: 0;
+  }
+
+  &.is-waiting {
+    transition: none;
+    opacity: 0;
+    transform: translate3d(-5em, 0, 0);
   }
 }
