--- a/app/assets/css/elements/_dropdown-menu.scss
+++ b/app/assets/css/elements/_dropdown-menu.scss
@@ -2,30 +2,26 @@
   left: 1.5em;
   right: 1.5em;
   padding: 0;
-  margin-top: -1em;
+  margin-top: -.5em;
   background: none;
   max-height: 50vh;
   overflow-y: auto;
   overflow-x: hidden;
-
-  &:before {
-    content: "";
-    display: block;
-    height: 2em;
-    background-image: linear-gradient( to top, white, rgba(255, 255, 255, 0));
-  }
 
   li {
     background: white;
   }
 
   > li > a {
-    padding: 1rem 1.5rem;
+    padding: 1rem 1.5rem 1rem calc(1.5rem - 5px);
     border-top: 1px solid #eee;
+    border-left: 0px solid transparent;
+    transition: border-left-width linear .1s;
 
     &:hover {
-      background-image: linear-gradient( to top, lighten($info, 45%), rgba(255, 255, 255, 0));
-      color: #333;
+      border-left: 5px solid $info;
+      background: #fafafa;
+      color: #000;
     }
   }
 
@@ -35,7 +31,6 @@
 }
 
 .dropdown-menu__label {
-  margin-top: -2em;
   padding: 1rem 1.5rem;
   text-transform: uppercase;
   font-size: .9em;
