--- a/app/assets/css/parts/_first-in-lighthouse.scss
+++ b/app/assets/css/parts/_first-in-lighthouse.scss
@@ -1,3 +1,17 @@
+.first-in-lighthouse {
+  background: url('/assets/img/winner.svg') .25em center no-repeat;
+  background-size: contain;
+  margin-top: -.5em;
+  padding-top: .5em;
+  margin-bottom: -.5em;
+  padding-bottom: .5em;
+
+  .stat-header {
+    text-align: center;
+    margin-top: 1em;
+  }
+}
+
 .first-in-lighthouse__container {
   margin-left: -2.1em;
   margin-right: -2.1em;
@@ -18,6 +32,12 @@
   }
 }
 
+.first-in-lighthouse__undecided {
+  @extend .data-label;
+  text-align: center;
+  line-height: 7em;
+}
+
 .first-in-lighthouse__content {
   padding: .3em 1.5em 1.25em;
   display: flex;
@@ -30,8 +50,6 @@
 }
 
 .first-in-lighthouse__players {
-  margin-bottom: 1.5em;
-  
   a {
     color: inherit;
   }
@@ -42,7 +60,7 @@
   font-size: 1em;
 
   & + span {
-    margin-top: .5em;
+    margin-top: 1.4em;
   }
 }
 
