Correct map name in popover

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -40,7 +40,7 @@
               Weapon usage on this map
             </h3>
             <span
-               data-content="{{'Weapon usage during Trials of Osiris on ' + (currentMap.name || 'this map') + ' compared to all maps'}}" bs-popover>
+               data-content="{{'Weapon usage during Trials of Osiris on ' + (currentMapInfo.name || 'this map') + ' compared to all maps'}}" bs-popover>
               <i class="material-icons icon--small info">&#xE8FD;</i>
             </span>
           </div>
